--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,9 +6,40 @@
 
     <display-name>PhoneBaseApp</display-name>
 
+    <context-param>
+        <param-name>spring.profiles.default</param-name>
+        <param-value>postgres,datajpa</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>
+            classpath:spring/spring-app.xml
+            classpath:spring/spring-db.xml
+        </param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
     <servlet>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>classpath:spring/spring-mvc.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>mvc-dispatcher</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+<!--    <servlet>
         <servlet-name>userServlet</servlet-name>
-        <servlet-class>ru.home.phoneBaseApp.web.UserServlet</servlet-class>
+        <servlet-class>ru.home.phoneBaseApp.web.user.UserServlet</servlet-class>
         <load-on-startup>0</load-on-startup>
     </servlet>
     <servlet-mapping>
@@ -18,12 +49,12 @@
 
     <servlet>
         <servlet-name>noteServlet</servlet-name>
-        <servlet-class>ru.home.phoneBaseApp.web.NoteServlet</servlet-class>
+        <servlet-class>ru.home.phoneBaseApp.web.phoneBaseNote.NoteServlet</servlet-class>
         <load-on-startup>0</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>noteServlet</servlet-name>
         <url-pattern>/notes</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
 
 </web-app>
